<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GreenMeet</string>
    <string name="screen1">Bienvenido a GreenMeet</string>
    <string name="screen1desc">Descubre una app para crear y realizar actividades que te gustan en el espacio urbano. La ciudad es tu espacio.</string>
    <string name="screen2desc">Conecta con personas que comparten tus ideas e intereses.  Crea experiencias juntos..</string>
    <string name="screen3desc">Entra y descubre.</string>
    <string name="MeApunto">Me apunto</string>
    <string name="IniciarSesion">Iniciar Sesión</string>
    <string name="Email" translatable="false">Email</string>
    <string name="Contrasena">Contraseña</string>
    <string name="IntrEmail">Introduce tu email</string>
    <string name="IntrContraseña">Introduce tu contraseña</string>
    <string name="NoTienCuenta">¿No tienes cuenta? Regístrate</string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="nom">Nombre</string>
    <string name="intNomb">Introduce un nombre</string>
    <string name="registrarse">Registrarse</string>
    <string name="tienesIniSesion">¿Tienes una cuenta? Inicia Sesión</string>
    <string name="inicio">Inicio</string>
    <string name="explorar">Explorar</string>
    <string name="inscrito">Inscrito</string>
    <string name="perfil">Perfil</string>
    <string-array name="generos">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>
    <string name="siguiente">Siguiente</string>
    <string name="omitir">Omitir</string>
    <string name="confirmarContrasena">Confirmar contraseña</string>
    <string name="contrasenaActual">Contraseña actual</string>
    <string name="titulo">Título</string>
    <string name="verMas">Ver más</string>
    <string name="bienv">Bienvenido a GreenMeet</string>
    <string name="descSliderScreen">Descubre una aplicación para crear y realizar actividades al aire libre con personas que comparten tus intereses.</string>
    <string name="editar">Editar</string>
    <string name="subirImagen">Subir una imagen</string>
    <string name="intrTitulo">Introduce el título</string>
    <string name="categoria">Categoría</string>
    <string name="selecCategoria">Selecciona una categoría</string>
    <string name="fechaAct">Fecha Actividad</string>
    <string name="selecFecha">Selecciona la fecha</string>
    <string name="ubicacion">Ubicación</string>
    <string name="intrUbicacion">Introduce la ubicación</string>
    <string name="intrFecha">Introduce la fecha</string>
    <string name="descripcion">Descripción</string>
    <string name="intrDescripcion">Introduce la descripción</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="fecha">Fecha</string>
    <string name="meApunto">Me apunto</string>
    <string name="guardarCambios">Guardar cambios</string>
    <string name="completed">Reailizada</string>
    <string name="telefono">Teléfono</string>
    <string name="genero">Género</string>
    <string name="mapaProx">Mapa proximamente</string>
    <string name="expAcciones">Explora acciones</string>
    <string name="hola">Hola, </string>
    <string name="categorias">Categorías</string>
    <string name="arteUrbano">Arte urbano</string>
    <string name="verdeYnaturaleza">Verde y naturaleza</string>
    <string name="limpUrbana">Limpieza urbana</string>
    <string name="salYdeporte">Salud y deporte</string>
    <string name="cultYsociedad">Cultura y sociedad</string>
    <string name="accProx">Acciones próximas</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="misInscrip">Mis inscripciones</string>
    <string name="proximas">Próximas</string>
    <string name="realizadas">Realizadas</string>
    <string name="selecIdioma">Selecciona el idioma de la app</string>
    <string name="spanish">Español</string>
    <string name="english">Inglés</string>
    <string name="tituloNoti1">Título de la notificación</string>
    <string name="descNoti1">Aquí va el mensaje de la notificación. Puede ser largo y descriptivo.</string>
    <string name="tiempoNoti1">Hace 2 horas</string>
    <string name="tituloNoti2">Otra notificación</string>
    <string name="descNoti2">Mensaje de otra notificación para mostrar cómo se ve.</string>
    <string name="tiempoNoti2">Ayer</string>
    <string name="tituloNoti3">Notificacion ya leida</string>
    <string name="descNoti3">Cuando una notificacion ya fue mostrada, cambiara de color</string>
    <string name="tiempoNoti3">Hace 1 mes</string>
    <string name="privacy_policy_text">
        <![CDATA[
        <b>Política de Privacidad</b><br><br>
        Esta aplicación respeta y protege la privacidad de sus usuarios. El presente documento describe cómo se recopila, utiliza y protege la información personal cuando se utiliza la aplicación.<br><br>
        <b>1. Información que se recopila</b><br>
        La aplicación recopila datos personales proporcionados por el usuario, que pueden incluir información necesaria para el funcionamiento correcto de la app.<br><br>
        <b>2. Uso de servicios de terceros</b><br>
        La aplicación utiliza servicios de terceros que pueden recopilar información para identificar al usuario:<br>
        • <b>Firebase (Google LLC):</b> Análisis, autenticación y almacenamiento.<br>
        • <b>Supabase:</b> Backend y gestión de datos.<br><br>
        <b>3. Uso de la información</b><br>
        La información se utiliza para mejorar la funcionalidad y la experiencia del usuario. No se vende ni se comparte con terceros ajenos al servicio.<br><br>
        <b>4. Seguridad</b><br>
        Se toman medidas razonables para proteger la información personal y evitar accesos no autorizados.<br><br>
        <b>5. Privacidad de menores</b><br>
        Esta aplicación no está dirigida a menores de 13 años.<br><br>
        <b>6. Cambios en esta política</b><br>
        Esta Política puede actualizarse ocasionalmente. Se recomienda revisar esta página periódicamente.<br><br>
        <b>7. Contacto</b><br>
        📧 greenmeet26@gmail.com
        ]]>
    </string>
    <string name="misActs">Mis Actividades</string>
    <string name="idioma">Idioma</string>
    <string name="polPrivacidad">Política de Privacidad</string>
    <string name="licencias">Licencias</string>
    <string name="desconectarse">Desconectarse</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="actCreadaConExito">Actividad creada con éxito</string>
    <string name="crearActividad">Crear actividad</string>
    <string name="rellenaTodosLosCampos">Rellena todos los campos</string>
    <string name="editarAct">Editar actividad</string>
    <string name="desapuntarse">Desapuntarse</string>
    <string name="errorObtenerActividad">Error al obtener actividad</string>
    <string name="complCamposObl">Completa los campos obligatorios</string>
    <string name="actActualizada">Actividad actualizada</string>
    <string name="editarPefil">Editar perfil</string>
    <string name="noEspecificar">No especificar</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="otro">Otro</string>
    <string name="perfilActualizado">Perfil actualizado</string>
    <string name="verif">Verificacion</string>
    <string name="conf">Confirmar</string>
    <string name="idiomaGuard">Idioma guardado</string>
    <string name="noHayActiv">No hay actividades</string>
    <string name="error" translatable="false">Error</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="intTele">Introduce tu teléfono</string>
    <string name="imgDescription" translatable="false">imgDescription</string>
    <string name="cdBtnBack" translatable="false">cdBtnBack</string>
    <string name="date_example" translatable="false">14 Feb - 18 Feb</string>
    <string name="title_example" translatable="false">Reforestación Urbana</string>
    <string name="loading">Cargando...</string>
    <string name="default_web_client_id" translatable="false">736310735735-vv66da9ch0nvkqikqonssidclb0gavh7.apps.googleusercontent.com</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="descubrir">Descubrir</string>
    <string name="participantes">Participantes</string>
    <string name="no_proximas">No tienes inscripciones próximas</string>
    <string name="no_realizadas">Aún no has completado actividades</string>
    <string name="dudas">Tods los comentarios</string>
    <string name="notifications">"Notificaciones "</string>
    <string name="respuesta_del_organizador">Respuesta del Organizador</string>
    <string name="entendido">Entendido</string>
    <string name="about_title">Acerca de</string>
    <string name="about_description">Nuestra misión es conectar personas a través de experiencias y eventos únicos que nos ayuden a cuidar el planeta. Gracias por ser parte de nuestra comunidad.</string>
    <string name="section_social_media">Nuestras Redes Sociales</string>
    <string name="follow_us">Síguenos para estar al día de todas las novedades.</string>
    <string name="section_credits_images">Créditos de Imágenes</string>
    <string name="photo_by">Foto de %1$s en Unsplash</string>
    <string name="author_ryoji">Ryoji Iwata</string>
    <string name="author_martin">Martin Sanchez</string>
    <string name="author_rhondak">RhondaK Native Florida Folk Artist</string>
    <string name="author_eugene">Eugene Golovesov</string>
    <string name="author_guillermo">Guillermo Casales</string>
    <string name="author_gia">Gia Duabav</string>
    <string name="author_hannah">Hannah Busing</string>
    <string name="desarrollador1">Nicolás Guañuna</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="developer" translatable="false">Developer</string>
    <string name="linkedin" translatable="false">LinkedIn</string>
    <string name="desarrollador2">" Alex Valdez"</string>
    <string name="response_blank">La respuesta no puede estar vacía</string>
    <string name="responder_comentario">Responder comentario</string>
    <string name="escribe_tu_respuesta_aqu">Escribe tu respuesta aquí...</string>
    <string name="enviar_respuesta">Enviar Respuesta</string>
    <string name="comentarios">Comentarios</string>
    <string name="ver_todo">Ver todo</string>
    <string name="escribe_tu_comentario">Escribe tu comentario...</string>
    <string name="pulsa_para_responder">PULSA PARA RESPONDER</string>
    <string name="permiso_de_ubicaci_n_denegado">Permiso de ubicación denegado</string>
    <string name="error_al_actualizar_el_perfil">Error al actualizar el perfil</string>
    <string name="pregunta_enviada">Pregunta enviada</string>
    <string name="t_preguntaste">Tú preguntaste:\n</string>
    <string name="confirmar_envio">⚠️ Confirmar envío</string>
    <string name="confirmar_texto_envio">Una vez enviada, la respuesta será pública y no podrás borrarla ni modificarla. ¿Estás seguro?</string>
    <string name="s_enviar">SÍ, ENVIAR</string>
    <string name="respuesta_enviada_correctamente">Respuesta enviada correctamente</string>
    <string name="error_al_enviar">Error al enviar</string>
    <string name="revisar">REVISAR</string>
    <string name="duda_en">"Comentario en: "</string>
    <string name="de">"De: "</string>
    <string name="te_han_respondido_en">"Te han respondido en: "</string>
    <string name="organizador">Organizador:</string>
    <string name="pulsa_para_ver">PULSA PARA VER</string>
    <string name="gitA" translatable="false">AL3X-AFK</string>
    <string name="gitN" translatable="false">Nicoooo26</string>
    <string name="igA" translatable="false">\@alx.valdez</string>
    <string name="igN" translatable="false">\@niicokngzz._</string>
</resources>