<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- IZQUIERDA -->
    <item
        android:id="@+id/home"
        android:icon="@drawable/home_icon"
        android:title="@string/inicio"
        app:showAsAction="always"/>

    <item
        android:id="@+id/explore"
        android:icon="@drawable/explore_icon"
        android:title="@string/explorar"
        app:showAsAction="always"/>

    <!-- DERECHA -->
    <item
        android:id="@+id/collection"
        android:icon="@drawable/fertile"
        android:title="@string/inscrito"
        app:showAsAction="always"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/perfil"
        app:showAsAction="always"/>
</menu>
