<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".fragments.CreateActFragment">

    <include
        android:id="@+id/headerBack"
        layout="@layout/view_header_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:id="@+id/scrollForm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Subir imagen -->
            <LinearLayout
                android:id="@+id/layoutUpload"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/border_upload"
                android:gravity="center"
                android:orientation="vertical">
                <!-- Vista previa -->
                <ImageView
                    android:id="@+id/imgUpload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/imgDescription"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:visibility="gone" />
                <!-- Placeholder -->
                <TextView
                    android:id="@+id/layoutPlaceholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableTopCompat="@drawable/upload_icon"
                    android:drawablePadding="6dp"
                    android:gravity="center"
                    android:text="@string/subirImagen"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    app:drawableTint="@color/gray"/>
            </LinearLayout>
            <!-- Título -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/titulo"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:boxBackgroundMode="outline"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/intrTitulo"
                    android:textColorHint="@color/gray"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Categoria -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/categoria"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:boxBackgroundMode="outline"
                app:hintEnabled="false">
                <AutoCompleteTextView
                    android:id="@+id/actvCategoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="15dp"
                    android:hint="@string/selecCategoria"
                    android:textSize="14sp"
                    android:textColorHint="@color/gray"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Fecha -->
            <TextView
                android:id="@+id/tvDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/fechaAct"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:boxBackgroundMode="outline"
                app:endIconDrawable="@drawable/calendar_icon"
                app:endIconMode="custom"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/selecFecha"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Ubicación -->
            <TextView
                android:id="@+id/tvLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ubicacion"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:boxBackgroundMode="outline"
                app:endIconDrawable="@drawable/location_icon"
                app:endIconMode="custom"
                app:hintEnabled="false">

                <AutoCompleteTextView
                    android:id="@+id/tietLocation"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:hint="@string/intrUbicacion"
                    android:textSize="14sp"
                   />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Descripción -->
            <TextView
                android:id="@+id/tvDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/descripcion"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:boxBackgroundMode="outline"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietDescription"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="top"
                    android:hint="@string/intrDescripcion"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
    <!-- Guardar -->
    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green_100"
        android:text="@string/guardar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!-- Cancelar -->
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/cancelar"
        android:textColor="@color/darkgreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/green_100"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>