<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:padding="16dp">
    <include
        android:id="@+id/headerBack"
        layout="@layout/view_header_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/headerBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBack"
        android:orientation="vertical">

        <!-- Imagen de perfil con botón editar -->
        <FrameLayout
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="24dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile_icon"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/CircleImage"
                android:background="@color/gray_light"
                android:clickable="true"
                android:focusable="true"/>

        </FrameLayout>

        <!-- Campo Nombre -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            android:textSize="16sp"
            android:textColor="@color/darkgreen"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="2dp"
            android:hint="@string/intNomb"
            android:autofillHints="username"
            android:textColorHint="@color/gray"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"/>

        <!-- Campo Email -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textSize="16sp"
            android:textColor="@color/darkgreen"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp"
            android:inputType="textEmailAddress"
            android:hint="@string/IntrEmail"
            android:autofillHints="emailAddress"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/gray"
            android:enabled="false"
            android:focusable="false"
            android:clickable="false"/>

        <!-- Campo Teléfono -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textSize="16sp"
            android:textColor="@color/darkgreen"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp"
            android:hint="@string/intTele"
            android:autofillHints="phone"
            android:textColorHint="@color/gray"
            android:inputType="phone"
            android:layout_marginBottom="16dp"/>

        <!-- Campo Género -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genero"
            android:textSize="16sp"
            android:textColor="@color/darkgreen"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="32dp"/>

        <!-- Botón Guardar -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/guardarCambios"
            android:textColor="#000000"
            android:background="@color/green_200"
            android:layout_marginBottom="200dp"/>

    </LinearLayout>

    </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
