<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="14dp"
    app:cardCornerRadius="18dp"
    app:cardElevation="4dp"
    app:strokeWidth="1dp"
    app:strokeColor="#EEEEEE">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal"
        android:padding="12dp">

        <!-- IMAGEN DERECHA -->
        <ImageView
            android:id="@+id/imgEvento"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/imgDescription"
            android:src="@drawable/placeholder" />

        <!-- CONTENIDO IZQUIERDA -->
        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="0dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_example"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/txtFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_example"
                android:textSize="13sp"
                android:textColor="#666666"/>

            <Button
                android:id="@+id/btnVerMas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editar"
                android:textColor="@color/black"
                android:backgroundTint="@color/green_200"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"/>

        </LinearLayout>



    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
