<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvExplorar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explorar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvMapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mapaProx"
        app:layout_constraintTop_toBottomOf="@+id/tvExplorar"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        android:textStyle="italic"/>

    <!-- Buscador -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/search_icon"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvMapa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expAcciones"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:drawableStart="@drawable/search_icon"
            android:background="@null"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!-- Recycler Próximos -->
    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/acProx"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/searchLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
